# Spellchecker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: 10000_words.txt  1000_words.txt  100_words.txt  6_words.txt  basic_2000.txt  basic_850.txt  words.txt
include/: clustering.h  spellchecker.h
source/: main.cpp  spellchecker.cpp
